--- a/css/style.css
+++ b/css/style.css
@@ -1,382 +1,345 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
 @font-face {
-    font-family: chalet;
-    src: url(../assets/typo/ChaletLondonNineteenSixty.ttf);
-}
+  font-family: chalet;
+  src: url(../assets/typo/ChaletLondonNineteenSixty.ttf); }
 
 header div img {
-    padding: 20px 50px;
-}
+  padding: 20px 50px; }
+
+header ul {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 150px; }
+  header ul li {
+    list-style-type: none;
+    display: inline; }
+
+.text-left, .about-us-text {
+  text-align: left; }
+
+.about-us-text {
+  font-size: 30px; }
 
 a {
-    text-decoration: none;
-    font-family: chalet;
-}
-header ul {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 150px;
-}
-header ul li {
-    list-style-type: none;
-    display: inline;
-}
+  text-decoration: none;
+  font-family: chalet; }
+
 .contenedor-logo {
-    width: 20%;
-    padding: 15px 40px;
-}
+  width: 20%;
+  padding: 15px 40px; }
 
 nav {
-    width: 80%;
-}
-nav ul {
-    list-style: none;
+  width: 80%; }
+  nav ul {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-}
-nav a {
-    text-decoration: none;
-}
+    list-style: none;
+    align-items: center; }
+  nav a {
+    text-decoration: none; }
 
 .index {
-    size: 20px;
-    text-transform: uppercase;
-    color: #08296c;
-}
+  size: 20px;
+  text-transform: uppercase;
+  color: #08296c; }
 
 .services {
-    size: 20px;
-    text-transform: uppercase;
-    color: #08296c;
-}
+  size: 20px;
+  text-transform: uppercase;
+  color: #08296c; }
 
 .team {
-    size: 20px;
-    text-transform: uppercase;
-    color: #08296c;
-}
+  size: 20px;
+  text-transform: uppercase;
+  color: #08296c; }
 
 .contact {
-    size: 20px;
-    text-transform: uppercase;
-    color: #08296c;
-}
+  size: 20px;
+  text-transform: uppercase;
+  color: #08296c; }
 
 .banner {
-    background-image: url(../assets/img/img-banner.png);
-    width: 100%;
-    font-family: chalet;
-    color: white;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+  background-image: url(../assets/img/img-banner.png);
+  width: 100%;
+  font-family: chalet;
+  color: white;
+  background-repeat: no-repeat;
+  background-size: cover; }
 
 .banner-component-one {
-    font-size: 30px;
-    padding-top: 3rem;
-    padding-bottom: 2rem;
-    margin-left: 4rem;
-}
+  font-size: 30px;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  margin-left: 4rem; }
 
 .banner div a {
-    font-size: 24px;
-    margin-left: 4rem;
-    color: white;
-    border: 2px solid white;
-    padding: 0.5rem 5rem;
-}
+  font-size: 24px;
+  margin-left: 4rem;
+  color: white;
+  border: 2px solid white;
+  padding: 0.5rem 5rem; }
 
 .banner-component-two {
-    font-size: 20px;
-    padding-left: 4rem;
-    margin-top: 12rem;
-    text-transform: uppercase;
-    background-color: #08296cde;
-}
+  font-size: 20px;
+  padding-left: 4rem;
+  margin-top: 12rem;
+  text-transform: uppercase;
+  background-color: #08296c; }
 
 .banner-component-two h2 {
-    padding: 15px 0;
-}
+  padding: 15px 0; }
 
 .banner-two {
-    background-color: #08296c;
-    font-size: 15px;
-    color: white;
-    font-family: chalet;
-    padding-left: 4rem;
-    padding-right: 4rem;
-    padding-top: 3rem;
-}
+  background-color: #08296c;
+  font-size: 15px;
+  color: white;
+  font-family: chalet;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-top: 3rem; }
+
 footer {
-    background-color: white;
-}
-footer div a {
+  background-color: white; }
+  footer .imagen-footer img {
+    width: 100%; }
+  footer div a {
     padding-left: 5px;
     font-family: chalet;
     font-size: 16px;
-    color: #08296c;
-}
-footer .imagen-footer img {
-    width: 100%;
-}
-footer .socials {
+    color: #08296c; }
+  footer .socials {
     display: flex;
     padding: 30px 170px 30px 30px;
     align-items: center;
-    justify-content: end;
-}
-footer .socials div img {
-    vertical-align: bottom;
-}
-footer .socials div:after {
-    content: "|";
-    margin: 0 50px;
-    font-size: 25px;
-    font-weight: 600;
-}
+    justify-content: end; }
+    footer .socials div :after {
+      content: "|";
+      margin: 0 50px;
+      font-size: 25px;
+      font-weight: 600; }
+    footer .socials div img {
+      vertical-align: bottom; }
+
 footer .socials div:last-child:after {
-    content: "";
-}
+  content: ""; }
+
 iframe {
-    width: 100%;
-}
+  width: 100%; }
+
 .topnav {
-    display: none;
-}
+  display: none; }
+
 .desktop-menu {
-    background-color: white;
-    display: flex;
-    align-items: center;
-}
+  background-color: white;
+  display: flex;
+  align-items: center; }
+
 @media screen and (max-width: 767px) {
-    .contact-form form {
-        padding: 0 calc(20px + 1rem);
-    }
-    .topnav {
-        display: block;
-    }
-    .desktop-menu {
-        display: none;
-    }
-}
-@media (min-width: 768px) and (max-width: 1024px)  {
-    .topnav {
-        display: block;
-    }
-    .desktop-menu {
-        display: none;
-    }
-}
+  .contact-form form {
+    padding: 0 calc(20px + 1rem); }
+  .topnav {
+    display: block; }
+  .desktop-menu {
+    display: none; } }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .topnav {
+    display: block; }
+  .desktop-menu {
+    display: none; } }
+
 /*--SERVICES--*/
 main {
-    background-color: #08296c;
-    font-family: chalet;
-    color: white;
-}
+  background-color: #08296c;
+  font-family: chalet;
+  color: white; }
+
 .item-service {
-    background-repeat: no-repeat;
-    width: 100%;
-    text-align: center;
-    text-decoration: overline;
-    padding: 4rem;
-    background-size: cover;
-}
+  background-repeat: no-repeat;
+  width: 100%;
+  text-align: center;
+  text-decoration: overline;
+  padding: 4rem;
+  background-size: cover; }
+
 .item-service h2 {
-    display: inline-block;
-    border: solid 0.5px white;
-    padding: 10px 0;
-    width: 200px;
-}
+  display: inline-block;
+  border: solid 0.5px white;
+  padding: 10px 0;
+  width: 200px; }
+
 .bunkering {
-    background-image: url(../assets/img-bunkering.png);
-}
+  background-image: url(../assets/img-bunkering.png); }
 
 .forwarding {
-    background-image: url(../assets/img-forwarding.png);
-}
+  background-image: url(../assets/img-forwarding.png); }
 
 .chartering {
-    background-image: url(../assets/img-chartering.png);
-}
+  background-image: url(../assets/img-chartering.png); }
 
 .agency {
-    background-image: url(../assets/img-agency.png);
-}
+  background-image: url(../assets/img-agency.png); }
 
 /*--OUR TEAM--*/
 .main-team {
-    padding-top: 50px;
-}
+  padding-top: 50px; }
+
 .main-team .separator {
-    background-color: white;
-    height: 2px;
-    width: 20%;
-    margin: auto;
-    margin-bottom: 30px;
-}
+  background-color: white;
+  height: 2px;
+  width: 20%;
+  margin: auto;
+  margin-bottom: 30px; }
+
 .team-header {
-    text-align: center;
-    margin-bottom: 30px;
-}
+  text-align: center;
+  margin-bottom: 30px; }
+
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 columns for desktop */
-    grid-gap: 20px; /* gap between elements */
-    margin: 0 5rem;
-}
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  /* 4 columns for desktop */
+  grid-gap: 20px;
+  /* gap between elements */
+  margin: 0 5rem; }
+
 .grid-item {
-    padding: 20px;
-    text-align: center;
-}
+  padding: 20px;
+  text-align: center; }
+
 .data-container {
-    padding-top: 100px;
-    margin-top: -100px;
-    padding-bottom: 100px;
-    background: rgba(255, 255, 255, 0.06);
-    height: 100%;
-}
+  padding-top: 100px;
+  margin-top: -100px;
+  padding-bottom: 100px;
+  background: rgba(255, 255, 255, 0.06);
+  height: 100%; }
+
 .data-container .data-header {
-    margin-top: 10px;
-    margin-bottom: 50px;
-}
+  margin-top: 10px;
+  margin-bottom: 50px; }
+
 .data-container .data-desc {
-    padding: 0 40px;
-    text-align: justify;
-}
+  padding: 0 40px;
+  text-align: justify; }
+
 @media (min-width: 768px) and (max-width: 1024px) {
-    .grid-container {
-        grid-template-columns: repeat(2, 1fr); /* 2 columns for tablets and mobile */
-    }
-    footer .socials {
-        margin: 20px;
-        padding: 0;
-    }
-    footer .socials div:after {
-        content: "";
-    }
-}
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+    /* 2 columns for tablets and mobile */ }
+  footer .socials {
+    margin: 20px;
+    padding: 0; }
+  footer .socials div:after {
+    content: ""; } }
+
 @media (max-width: 767px) {
-    .grid-container {
-        grid-template-columns: repeat(1, 1fr); /* 2 columns for tablets and mobile */
-        margin: 0 1rem;
-    }
-    .main-team .separator {
-        width: 70%;
-    }
-    footer .socials {
-        margin: 20px;
-        display: block;
-        padding: 0;
-    }
-    footer .socials div:after {
-        content: "";
-    }
-}
+  .grid-container {
+    grid-template-columns: repeat(1, 1fr);
+    /* 2 columns for tablets and mobile */
+    margin: 0 1rem; }
+  .main-team .separator {
+    width: 70%; }
+  footer .socials {
+    margin: 20px;
+    display: block;
+    padding: 0; }
+  footer .socials div:after {
+    content: ""; } }
 
 /*-- CONTACT -*/
 .contact-form form {
-    padding: 0 150px;
-}
+  padding: 0 150px; }
+
 .contact-form .header-contact {
-    padding-top: 150px;
-    font-size: 32px;
-    font-weight: 700;
-}
+  padding-top: 150px;
+  font-size: 32px;
+  font-weight: 700; }
+
 .background-contact {
-    background-image: url(../assets/img/fondo-contact.png);
-    height: 400px;
-}
+  background-image: url(../assets/img/fondo-contact.png);
+  height: 400px; }
 
 @media (max-width: 767px) {
-    .contact-form form {
-        padding: 0 calc(20px + 1rem);
-    }
-}
+  .contact-form form {
+    padding: 0 calc(20px + 1rem); } }
 
 /*-- OFFICES -*/
 .offices-container {
-    display: flex;
-    flex-direction: column;
-}
+  display: flex;
+  flex-direction: column; }
+
 .offices {
-    size: 20px;
-    text-transform: uppercase;
-    color: #08296c;
-}
+  size: 20px;
+  text-transform: uppercase;
+  color: #08296c; }
+
 .offices-container-inner {
-    display: flex;
-    padding: 50px 200px;
-    justify-content: space-between;
-}
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 200px; }
+
 .office h2 {
-    margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
+
 .office {
-    display: flex;
-    align-items: center;
-}
+  display: flex;
+  align-items: center; }
+
 .icon-container {
-    margin-right: 20px;
-}
+  margin-right: 20px; }
+
 .icon-container img {
-    width: 20px;
-}
+  width: 20px; }
+
 .offices-container .title-container {
-    padding: 15px 4rem;
-    margin-top: -70px;
-    background-color: #08296cde;
-}
+  padding: 15px 4rem;
+  margin-top: -70px;
+  background-color: #08296c; }
+
 .offices-data-container {
-    padding-top: 10px;
-}
+  padding-top: 10px; }
+
 @media (max-width: 767px) {
-    .offices-container-inner {
-        padding: 0 20px;
-        flex-wrap: wrap;
-    }
-    .office {
-        margin-bottom: 25px;
-        margin-top: 25px;
-    }
-}
+  .offices-container-inner {
+    padding: 0 20px;
+    flex-wrap: wrap; }
+  .office {
+    margin-bottom: 25px;
+    margin-top: 25px; } }
+
 @media (min-width: 768px) and (max-width: 1024px) {
-    .offices-container-inner {
-        padding: 50px 50px;
-    }
-}
+  .offices-container-inner {
+    padding: 50px 50px; } }
 
 /*-- HAMBURGER -*/
 .topnav {
-    overflow: hidden;
-    background-color: white;
-    position: relative;
-}
+  overflow: hidden;
+  background-color: white;
+  position: relative; }
+
 .topnav #myLinks {
-    display: none;
-}
+  display: none; }
+
 .topnav a {
-    color: #08296c;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-}
+  color: #08296c;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block; }
+
 .topnav a.icon {
-    color: #08296c;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    margin-top: 10px;
-    font-size: 25px;
-}
+  color: #08296c;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-top: 10px;
+  font-size: 25px; }
+
 .logo-mobile {
-    padding-left: 20px;
-    width: 300px;
-}
+  padding-left: 20px;
+  width: 300px; }
