--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ nav {
   padding-left: 4rem;
   margin-top: 12rem;
   text-transform: uppercase;
-  background-color: #08296c; }
+  background-color: #08296cde; }
 
 .banner-component-two h2 {
   padding: 15px 0; }
@@ -298,7 +298,7 @@ main {
 .offices-container .title-container {
   padding: 15px 4rem;
   margin-top: -70px;
-  background-color: #08296c; }
+  background-color: #08296cde; }
 
 .offices-data-container {
   padding-top: 10px; }
