--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -120,7 +120,7 @@ nav {
     padding-left: 4rem;
     margin-top: 12rem;
     text-transform: uppercase;
-    background-color: $base-color;
+    background-color: #08296cde;
 }
 
 .banner-component-two {
@@ -368,7 +368,7 @@ main {
 .offices-container .title-container {
     padding: 15px 4rem;
     margin-top: -70px;
-    background-color: $base-color;
+    background-color: #08296cde;
 }
 .offices-data-container {
     padding-top: 10px;
